--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
@@ -137,7 +137,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 320px; margin: -14px; height: 26px;  border: none; color: blue" id="fooTipoTrabajador" actionListener="#{controlVigenciaTipoTrabajador.recibirPaginaEntrante('atrastipotrabajadoremplvigenciatipotrabajador')}" action="tipotrabajadoremplvigenciatipotrabajador" value="" process="@this"/>
+                                        <p:commandButton style="width: 320px; margin: -14px; height: 26px;  border: none; color: blue" id="fooTipoTrabajador" actionListener="#{controlTiposTrabajadores.recibirPaginaAnterior('atrastipotrabajadoremplvigenciatipotrabajador')}" action="tipotrabajadoremplvigenciatipotrabajador" value="" process="@this"/>
                                     </f:facet>
 
                                 </p:column>
