--- a/DesignerRHN/DesignerRHN-war/web/emplvigenciascargos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigenciascargos.xhtml
@@ -208,7 +208,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer" >
-                                        <p:commandButton value="" style="width: 170px; height: inherit; border-radius: 0px; margin-left: -10px; margin-right: -10px " action="centrocostoemplvigenciacargo" actionListener="#{controlBetaCentrosCostos.recibirPagina('atrascentrocostoemplvigenciacargo')}" id="fooCentrosCostos" />
+                                        <h:outputText value="" />
                                     </f:facet>
                                 </p:column>
 
